--- a/hackrx_demo.ipynb
+++ b/hackrx_demo.ipynb
@@ -4,18 +4,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ee9025b9",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "hackenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
